--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <div class="level-left">
       <div class="navbar-brand">
         <div class="navbar-item px-0 is-align-items-start is-flex-direction-column">
-          <p class="title">Raúl Martín Parra</p>
-          <p class="subtitle">contact@raulmartin.work</p>
+          <p class="title is-4 has-text-weight-semibold has-text-black">Raúl Martín Parra</p>
+          <p class="subtitle has-text-black is-6 has-text-weight-light">contact@raulmartin.work</p>
         </div>
       </div>
     </div>
@@ -48,14 +48,14 @@
     <div class="level-right">
       <div class="field has-addons">
         <p class="control">
-          <button class="button is-medium">
+          <button class="button is-normal is-black is-outlined">
             <span class="icon is-small">
               <i class="fa-brands fa-linkedin-in"></i>
             </span>
           </button>
         </p>
         <p class="control">
-          <button class="button is-black is-medium">
+          <button class="button is-black is-outlined is-normal">
             <span>Get in touch</span>
           </button>
         </p>
@@ -66,10 +66,10 @@
   <hr class="divider">
 
   <section class="section px-0">
-    <div class="columns is-align-items-top">
-      <div class="column is-two-fifths"><span class="is-size-0 has-text-weight-medium" style="line-height: 126px;">RMP</span></div>
+    <div class="columns is-gap-5 is-align-items-top">
+      <div class="column is-two-fifths"><span class="is-size-1-mobile is-size-0 has-text-weight-medium has-text-black" style="line-height: 126px;">RMP</span></div>
       <div class="column">
-        <p class="is-size-3">
+        <p class="is-size-5-mobile is-size-4-tablet is-size-3-widescreen has-text-black">
           For the last ten years I've been helping companies translate their needs, vision, and values clearly into
           solutions in
           the physical and digital world. My background is in design, branding, UI/UX, and product design.
@@ -94,10 +94,10 @@
             </figure>
           </div>
           <div class="card-content px-0">
-            <p class="title is-5 has-text-weight-semibold mb-4">Laterdude</p>
-            <div class="content is-body-text">
+            <p class="title is-5 has-text-weight-semibold mb-4 has-text-black">Laterdude</p>
+            <div class="content is-body-text has-text-black">
               <p>Making the best out of your forgotten bookmarks and browser tabs.</p>
-              <p><a href="#">Read more</a></p>
+              <span class="tag is-rounded is-dark is-review-tag"> COMING SOON </span>
             </div>
           </div>
         </div>
@@ -114,10 +114,10 @@
             </figure>
           </div>
           <div class="card-content px-0">
-            <p class="title is-5 has-text-weight-semibold mb-4">Jumble</p>
-            <div class="content is-body-text">
+            <p class="title is-5 has-text-weight-semibold mb-4 has-text-black">Jumble</p>
+            <div class="content is-body-text has-text-black">
               <p>A community to engage with other developers and solve problems in public.</p>
-              <p><a href="#">Read more</a></p>
+              <p><a href="project_jumble.html">Read more</a></p>
             </div>
           </div>
         </div>
@@ -134,8 +134,8 @@
             </figure>
           </div>
           <div class="card-content px-0">
-            <p class="title is-5 has-text-weight-semibold mb-4">Huuva</p>
-            <div class="content is-body-text">
+            <p class="title is-5 has-text-weight-semibold mb-4 has-text-black">Huuva</p>
+            <div class="content is-body-text has-text-black">
               <p>Enhancing the back of the house of multiple high volume restaurant kitchen.</p>
               <p><a href="#">Read more</a></p>
             </div>
@@ -154,8 +154,8 @@
             </figure>
           </div>
           <div class="card-content px-0">
-            <p class="title is-5 has-text-weight-semibold mb-4">My Weather</p>
-            <div class="content is-body-text">
+            <p class="title is-5 has-text-weight-semibold mb-4 has-text-black">My Weather</p>
+            <div class="content is-body-text has-text-black">
               <p>Exploring different UX scenarios for a weather app.</p>
               <p><a href="#">Read more</a></p>
             </div>
@@ -174,8 +174,8 @@
             </figure>
           </div>
           <div class="card-content px-0">
-            <p class="title is-5 has-text-weight-semibold mb-4">Delicious! Takeaway</p>
-            <div class="content is-body-text">
+            <p class="title is-5 has-text-weight-semibold mb-4 has-text-black">Delicious! Takeaway</p>
+            <div class="content is-body-text has-text-black">
               <p>A personalised user experience for those who know what they like, and don't.</p>
               <p><a href="#">Read more</a></p>
             </div>
@@ -194,8 +194,8 @@
             </figure>
           </div>
           <div class="card-content px-0">
-            <p class="title is-5 has-text-weight-semibold mb-4">Book-A-Flight</p>
-            <div class="content is-body-text">
+            <p class="title is-5 has-text-weight-semibold mb-4 has-text-black">Book-A-Flight</p>
+            <div class="content is-body-text has-text-black">
               <p>A simplified exploration of a flight booking screen.</p>
               <p><a href="#">Read more</a></p>
             </div>
@@ -214,8 +214,8 @@
             </figure>
           </div>
           <div class="card-content px-0">
-            <p class="title is-5 has-text-weight-semibold mb-4">Elina Lahdetie</p>
-            <div class="content is-body-text">
+            <p class="title is-5 has-text-weight-semibold mb-4 has-text-black">Elina Lahdetie</p>
+            <div class="content is-body-text has-text-black">
               <p>A no-code site update of one of the most demanded aesthetic clinics in Helsinki.</p>
               <p><a href="#">Read more</a></p>
             </div>
@@ -234,8 +234,8 @@
             </figure>
           </div>
           <div class="card-content px-0">
-            <p class="title is-5 has-text-weight-semibold mb-4">B-MURALS</p>
-            <div class="content is-body-text">
+            <p class="title is-5 has-text-weight-semibold mb-4 has-text-black">B-MURALS</p>
+            <div class="content is-body-text has-text-black">
               <p>An Urban Art Museum and store, with a community driven and educational approach, built with no-code tools.</p>
               <p><a href="#">Read more</a></p>
             </div>
@@ -254,8 +254,8 @@
             </figure>
           </div>
           <div class="card-content px-0">
-            <p class="title is-5 has-text-weight-semibold mb-4">Seda de Cactus</p>
-            <div class="content is-body-text">
+            <p class="title is-5 has-text-weight-semibold mb-4 has-text-black">Seda de Cactus</p>
+            <div class="content is-body-text has-text-black">
               <p>A no-code online boutique focused on fashion and home décor, inspired in Morocco.</p>
               <p><a href="#">Read more</a></p>
             </div>
@@ -293,15 +293,15 @@
           <p class="image is-square">
             <img
               class="is-border-hard"
-              src="https://bulma.io/assets/images/placeholders/1280x960.png"
+              src="media/raul-foto.jpg"
             />
           </p>
         </figure>
       </div>
       <div class="column">
         <div class="content">
-          <h1 class="title">About me</h1>
-          <p>
+          <h1 class="title is-5 has-text-weight-semibold has-text-black">About me</h1>
+          <p class="has-text-black">
             I work across teams to discover, define, and refine user experiences and streamline processes, advocating
             for key needs
             of the users. innovative solutions, and understanding technical requirements and scopes. I use quick
@@ -338,7 +338,7 @@
             <div class="media is-justify-content-space-between">
 
               <div class="is-justify-content-space-between">
-                <p class="has-text-weight-semibold is-6 mb-5">Tiina Romu</p>
+                <p class="has-text-weight-semibold is-6 mb-5 has-text-black">Tiina Romu</p>
                 <div class="is-align-items-flex-start is-flex-direction-column tags">
                   <span class="tag is-review-tag is-rounded is-light">DEV TEAM LEAD</span>
                   <span class="tag is-review-tag is-rounded is-light">FORMER CO-WORKER</span>
@@ -356,7 +356,7 @@
               </div>
             </div>
 
-            <div class="content is-body-text">
+            <div class="content is-body-text has-text-black">
               I had the pleasure of working with Raul in the product team at Huuva. Raul understands user needs and
               business goals and can craft the solution so that it aligns with both. This he does by asking a lot of
               questions that drive to deeper understanding of the problem at hand. Raul also takes responsibility on
@@ -372,7 +372,7 @@
             <div class="media is-justify-content-space-between">
 
               <div class="is-justify-content-space-between">
-                <p class="has-text-weight-semibold is-6 mb-5">Vincent Pakkala</p>
+                <p class="has-text-weight-semibold is-6 mb-5 has-text-black">Vincent Pakkala</p>
                 <div class="is-align-items-flex-start is-flex-direction-column tags">
                   <span class="tag is-review-tag is-rounded is-light">DIRECTOR OF FINANCE</span>
                   <span class="tag is-review-tag is-rounded is-light">FORMER CO-WORKER</span>
@@ -390,7 +390,7 @@
               </div>
             </div>
 
-            <div class="content is-body-text">
+            <div class="content is-body-text has-text-black">
               I had the pleasure of working with Raul at Huuva. Raul always brought a strong collaborative work ethic to
               each project he was involved in and through asking the right questions, was able to consistently deliver
               results that surpassed the initial concept. On top of being aesthetically pleasing, his designs were also
@@ -406,7 +406,7 @@
             <div class="media is-justify-content-space-between">
 
               <div class="is-justify-content-space-between">
-                <p class="has-text-weight-semibold is-6 mb-5">Rogier van der Heide</p>
+                <p class="has-text-weight-semibold is-6 mb-5 has-text-black">Rogier van der Heide</p>
                 <div class="is-align-items-flex-start is-flex-direction-column tags">
                   <span class="tag is-review-tag is-rounded is-light">FOUNDER & ADVISOR</span>
                   <span class="tag is-review-tag is-rounded is-light">MENTOR</span>
@@ -424,7 +424,7 @@
               </div>
             </div>
 
-            <div class="content is-body-text">
+            <div class="content is-body-text has-text-black">
               Raul Martin is a true designer. What that means is that his thinking is geared towards the future; a
               future that he is able to firm up and make real. It makes Raul a true asset for any company that considers
               design a value driver. Moreover, with his ability to think beyond the traditional boundaries of design.
@@ -439,7 +439,7 @@
             <div class="media is-justify-content-space-between">
 
               <div class="is-justify-content-space-between">
-                <p class="has-text-weight-semibold is-6 mb-5">Adrián Martín</p>
+                <p class="has-text-weight-semibold is-6 mb-5 has-text-black">Adrián Martín</p>
                 <div class="is-align-items-flex-start is-flex-direction-column tags">
                   <span class="tag is-review-tag is-rounded is-light">FOUNDER & TECH LEAD</span>
                   <span class="tag is-review-tag is-rounded is-light">CLIENT</span>
@@ -457,7 +457,7 @@
               </div>
             </div>
 
-            <div class="content is-body-text">
+            <div class="content is-body-text has-text-black">
               I've had the pleasure of working closely with Raul on different projects. His comprehensive approach
               ensures his solutions are not only effective but also deeply focused on enhancing the user experience. His
               kindness, professionalism, and organizational skills shine through in every interaction. Raul's design
@@ -476,7 +476,7 @@
             <div class="media is-justify-content-space-between">
 
               <div class="is-justify-content-space-between">
-                <p class="has-text-weight-semibold is-6 mb-5">Tim Campbell</p>
+                <p class="has-text-weight-semibold is-6 mb-5 has-text-black">Tim Campbell</p>
                 <div class="is-align-items-flex-start is-flex-direction-column tags">
                   <span class="tag is-review-tag is-rounded is-light">KITCHEN LAUNCHER</span>
                   <span class="tag is-review-tag is-rounded is-light">FORMER CO-WORKER</span>
@@ -494,7 +494,7 @@
               </div>
             </div>
 
-            <div class="content is-body-text">
+            <div class="content is-body-text has-text-black">
               Raul consistently demonstrated exceptional professionalism. We worked on various tasks together, ranging
               from designing kitchen layouts and front-of-house designs to conducting product feedback interviews with
               chefs and kitchen managers. Raul's design expertise were instrumental in our projects, and he played a key
@@ -510,7 +510,7 @@
             <div class="media is-justify-content-space-between">
 
               <div class="is-justify-content-space-between">
-                <p class="has-text-weight-semibold is-6 mb-5">Akseli Huhtanen</p>
+                <p class="has-text-weight-semibold is-6 mb-5 has-text-black">Akseli Huhtanen</p>
                 <div class="is-align-items-flex-start is-flex-direction-column tags">
                   <span class="tag is-review-tag is-rounded is-light">LEARNING MANAGER</span>
                   <span class="tag is-review-tag is-rounded is-light">FORMER CO-WORKER</span>
@@ -528,7 +528,7 @@
               </div>
             </div>
 
-            <div class="content is-body-text">
+            <div class="content is-body-text has-text-black">
               In a collaborative project, it would be great to have it all: Facilitation and people skills, UX, digital,
               graphic design, product management and a user-centric vision. And Raul has all of these competencies! We
               have worked together on product discoveries, design projects and photography and it has always been really
@@ -543,7 +543,7 @@
           <div class="card-content h-100 is-flex is-flex-direction-column is-justify-content-space-between">
             <div class="media is-justify-content-space-between">
 
-              <div class="is-justify-content-space-between">
+              <div class="is-justify-content-space-between has-text-black">
                 <p class="has-text-weight-semibold is-6 mb-5">Markus Kauppinen</p>
                 <div class="is-align-items-flex-start is-flex-direction-column tags">
                   <span class="tag is-review-tag is-rounded is-light">KITCHEN OPERATIONS LEAD</span>
@@ -562,7 +562,7 @@
               </div>
             </div>
 
-            <div class="content is-body-text">
+            <div class="content is-body-text has-text-black">
               Raul possesses a remarkable talent for turning ideas into reality. He excels at attentively addressing
               real-life operational challenges and translating them into effective UI solutions.
             </div>
@@ -575,10 +575,10 @@
   <hr class="divider">
 
   <section class="section px-0">
-    <div class="columns is-align-items-top">
-      <div class="column is-two-fifths"><span class="is-size-0 has-text-weight-medium" style="line-height: 126px;">THX</span></div>
+    <div class="columns is-gap-5 is-align-items-top">
+      <div class="column is-two-fifths"><span class="is-size-0 has-text-weight-medium has-text-black" style="line-height: 126px;">THX</span></div>
       <div class="column">
-        <p class="is-size-5">
+        <p class="is-size-5 has-text-black">
           Thanks to the companies, entrepreneurs and individuals that trusted me all these years: Alan Diaz, Alavera,
           Amara Florido, Artic Water, B-Murals, Buyukat, Capful, Contacto Singular, Corinna Erl, Dame de Fer, Davide
           Stasi,
@@ -596,7 +596,7 @@
   <hr class="divider">
 
   <section class="section px-0">
-    <p class="has-text-weight-semibold">
+    <p class="has-text-weight-regular has-text-black">
       My mission is to enhance human interactions through design. This is what drives me in my way to improve people's
       lives and experiences.
     </p>
