--- a/project_template.html
+++ b/project_template.html
@@ -29,33 +29,36 @@
     rel="stylesheet"
     href="portfolio.css"
   >
+  <script src="https://kit.fontawesome.com/d68454b009.js" crossorigin="anonymous"></script>
 </head>
 
-<body class="container is-ibm-plex-mono-regular">
-  <nav
-    class="navbar section px-0"
-    role="navigation"
-    aria-label="main navigation"
-  >
-    <div class="navbar-brand">
-      <div class="navbar-item is-align-items-start is-flex-direction-column">
-        <p class="title">Raúl Martín Parra</p>
-        <p class="subtitle">contact@raulmartin.work</p>
+<body class="container is-ibm-plex-mono-regular mobile-margins">
+  <nav class="level section px-0 mb-0" role="navigation" aria-label="main navigation">
+    <!-- Left side -->
+    <div class="level-left">
+      <div class="navbar-brand">
+        <div class="navbar-item px-0 is-align-items-start is-flex-direction-column">
+          <p class="title is-4 has-text-weight-semibold has-text-black">Raúl Martín Parra</p>
+          <p class="subtitle has-text-black is-6 has-text-weight-light">contact@raulmartin.work</p>
+        </div>
       </div>
     </div>
-
-    <div class="navbar-menu">
-      <div class="navbar-end">
-        <div class="navbar-item">
-          <div class="buttons">
-            <a class="button is-black">
-              <strong>Linkedin</strong>
-            </a>
-            <a class="button is-black">
-              <strong>Get in touch</strong>
-            </a>
-          </div>
-        </div>
+  
+    <!-- Right side -->
+    <div class="level-right">
+      <div class="field has-addons">
+        <p class="control">
+          <button class="button is-normal is-black is-outlined">
+            <span class="icon is-small">
+              <i class="fa-brands fa-linkedin-in"></i>
+            </span>
+          </button>
+        </p>
+        <p class="control">
+          <button class="button is-black is-outlined is-normal">
+            <span>Get in touch</span>
+          </button>
+        </p>
       </div>
     </div>
   </nav>
@@ -63,23 +66,23 @@
   <hr class="divider">
 
   <section class="section px-0">
-    <div class="columns is-align-items-center">
-      <div class="column is-two-fifths"><span class="is-size-3 has-text-weight-semibold">Project X</span></div>
+    <div class="columns">
+      <div class="column is-two-fifths"><span class="is-size-3 has-text-weight-semibold has-text-black">Project X</span></div>
       <div class="column">
-        <p class="is-size-5">
+        <div class="tags mt-5">
+          <span class="tag is-review-tag is-rounded">PRODUCT DESIGN</span>
+          <span class="tag is-review-tag is-rounded">UX/UI</span>
+          <span class="tag is-review-tag is-rounded">SERVICE DESIGN</span>
+          <span class="tag is-review-tag is-rounded">BRANDING</span>
+          <span class="tag is-review-tag is-rounded">CREATIVE DIRECTION</span>
+          <span class="tag is-review-tag is-rounded">DESIGN</span>
+        </div>
+        <p class="is-size-5 has-text-black">
           For the last ten years I've been helping companies translate their needs, vision, and values clearly into
           solutions in
           the physical and digital world. My background is in design, branding, UI/UX, and product design.
         </p>
-        <div class="buttons are-small mt-5">
-          <span class="button is-rounded is-black is-outlined is-tag is-border-thin is-review-tag">PRODUCT DESIGN</span>
-          <span class="button is-rounded is-black is-outlined is-tag is-border-thin is-review-tag">UX/UI</span>
-          <span class="button is-rounded is-black is-outlined is-tag is-border-thin is-review-tag">SERVICE DESIGN</span>
-          <span class="button is-rounded is-black is-outlined is-tag is-border-thin is-review-tag ">BRANDING</span>
-          <span class="button is-rounded is-black is-outlined is-tag is-border-thin is-review-tag ">CREATIVE
-            DIRECTION</span>
-          <span class="button is-rounded is-black is-outlined is-tag is-border-thin is-review-tag">DESIGN</span>
-        </div>
+
       </div>
     </div>
   </section>
@@ -92,9 +95,9 @@
   </section>
 
   <section class="section px-0">
-    <div class="columns is-align-items-center">
-      <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold">Project X</span></div>
-      <div class="column">
+    <div class="columns">
+      <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">Project X</span></div>
+      <div class="column has-text-black">
         <p>
           For the last ten years I've been helping companies translate their needs, vision, and values clearly into
           solutions in
@@ -124,7 +127,7 @@
   <hr class="divider">
 
   <section class="section px-0">
-    <p class="has-text-weight-semibold">
+    <p class="has-text-weight-regular has-text-black">
       My mission is to enhance human interactions through design. This is what drives me in my way to improve people's
       lives and experiences.
     </p>
