--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-theme="light">
 
 <head>
   <meta charset="utf-8">
@@ -30,6 +30,7 @@
     href="portfolio.css"
   >
   <script src="https://kit.fontawesome.com/d68454b009.js" crossorigin="anonymous"></script>
+  
 </head>
 
 <body class="container is-ibm-plex-mono-regular mobile-margins">
@@ -117,7 +118,8 @@
             <p class="title is-5 has-text-weight-semibold mb-4 has-text-black">Jumble</p>
             <div class="content is-body-text has-text-black">
               <p>A community to engage with other developers and solve problems in public.</p>
-              <p><a href="project_jumble.html">Read more</a></p>
+              <a class="button is-small is-light" href="project_jumble.html">Read more</a>
+
             </div>
           </div>
         </div>
@@ -157,7 +159,7 @@
             <p class="title is-5 has-text-weight-semibold mb-4 has-text-black">My Weather</p>
             <div class="content is-body-text has-text-black">
               <p>Exploring different UX scenarios for a weather app.</p>
-              <p><a href="#">Read more</a></p>
+              <a class="button is-small is-light" href="project_weather.html">Read more</a>
             </div>
           </div>
         </div>
@@ -177,7 +179,7 @@
             <p class="title is-5 has-text-weight-semibold mb-4 has-text-black">Delicious! Takeaway</p>
             <div class="content is-body-text has-text-black">
               <p>A personalised user experience for those who know what they like, and don't.</p>
-              <p><a href="#">Read more</a></p>
+              <a class="button is-small is-light" href="project_delicious.html">Read more</a>
             </div>
           </div>
         </div>
@@ -197,7 +199,7 @@
             <p class="title is-5 has-text-weight-semibold mb-4 has-text-black">Book-A-Flight</p>
             <div class="content is-body-text has-text-black">
               <p>A simplified exploration of a flight booking screen.</p>
-              <p><a href="#">Read more</a></p>
+              <a class="button is-small is-light" href="project_book-a-flight.html">Read more</a>
             </div>
           </div>
         </div>
@@ -322,7 +324,7 @@
             to improve
             people's experiences.
           </p>
-          <p><a href="#">Read CV</a></p>
+          <a class="button is-small is-light" href="project_jumble.html">Read CV</a>
         </div>
       </div>
     </div>
