--- a/project_delicious.html
+++ b/project_delicious.html
@@ -67,12 +67,11 @@
 
   <section class="section px-0">
     <div class="columns">
-      <div class="column is-two-fifths"><span class="is-size-3 has-text-weight-semibold has-text-black">Jumble</span></div>
+      <div class="column is-two-fifths"><span class="is-size-3 has-text-weight-semibold has-text-black">Delicious! Takeaway</span></div>
       <div class="column">
         <div class="tags mt-5">
-          <span class="tag is-review-tag is-rounded">MVP</span>
+          <span class="tag is-review-tag is-rounded">EXPLORATION</span>
           <span class="tag is-review-tag is-rounded">PRODUCT DESIGN</span>
-          <span class="tag is-review-tag is-rounded">SERVICE DESIGN</span>
           <span class="tag is-review-tag is-rounded">UX/UI</span>
           <span class="tag is-review-tag is-rounded">BRANDING</span>
         </div>
@@ -87,7 +86,7 @@
   <section class="section px-0">
     <img
       class="image is-fullwidth is-border-soft"
-      src="media/projects/jumble-1.jpeg"
+      src="media/projects/delicious-1.jpeg"
     >
   </section>
 
@@ -105,7 +104,7 @@
   <section class="section px-0 pb-5">
     <img
       class="image is-fullwidth is-border-soft"
-      src="media/projects/jumble-2.jpeg"
+      src="media/projects/delicious-2.jpeg"
     >
   </section>
 
@@ -114,13 +113,13 @@
       <div class="column">
         <img
           class="image is-1by1 is-fullwidth is-border-soft"
-          src="media/projects/jumble-4.jpeg"
+          src="media/projects/delicious-3.jpeg"
         >
       </div>
       <div class="column">
         <img
           class="image is-1by1 is-fullwidth is-border-soft"
-          src="media/projects/jumble-3.jpeg"
+          src="media/projects/delicious-4.jpeg"
         >
       </div>
     </div>
@@ -140,32 +139,8 @@
   <section class="section px-0 pb-5">
     <img
       class="image is-fullwidth is-border-soft"
-      src="media/projects/jumble-5.jpeg"
+      src="media/projects/delicious-5.jpeg"
     >
-  </section>
-
-  <section class="section px-0 pb-5">
-    <img
-      class="image is-fullwidth is-border-soft"
-      src="media/projects/jumble-6.jpeg"
-    >
-  </section>
-
-  <section class="section px-0 pt-0">
-    <div class="columns">
-      <div class="column">
-        <img
-          class="image is-1by1 is-fullwidth is-border-soft"
-          src="media/projects/jumble-7.jpeg"
-        >
-      </div>
-      <div class="column">
-        <img
-          class="image is-1by1 is-fullwidth is-border-soft"
-          src="media/projects/jumble-8.jpeg"
-        >
-      </div>
-    </div>
   </section>
 
   <hr class="divider">
