--- a/project_weather.html
+++ b/project_weather.html
@@ -67,12 +67,11 @@
 
   <section class="section px-0">
     <div class="columns">
-      <div class="column is-two-fifths"><span class="is-size-3 has-text-weight-semibold has-text-black">Jumble</span></div>
+      <div class="column is-two-fifths"><span class="is-size-3 has-text-weight-semibold has-text-black">My Weather</span></div>
       <div class="column">
         <div class="tags mt-5">
-          <span class="tag is-review-tag is-rounded">MVP</span>
+          <span class="tag is-review-tag is-rounded">EXPLORATION</span>
           <span class="tag is-review-tag is-rounded">PRODUCT DESIGN</span>
-          <span class="tag is-review-tag is-rounded">SERVICE DESIGN</span>
           <span class="tag is-review-tag is-rounded">UX/UI</span>
           <span class="tag is-review-tag is-rounded">BRANDING</span>
         </div>
@@ -87,13 +86,13 @@
   <section class="section px-0">
     <img
       class="image is-fullwidth is-border-soft"
-      src="media/projects/jumble-1.jpeg"
+      src="media/projects/weather-4.jpeg"
     >
   </section>
 
   <section class="section px-0">
     <div class="columns">
-      <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">The gap</span></div>
+      <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">The Aesthetic</span></div>
       <div class="column has-text-black">
         <p>
           We wanted to address several common issues faced by tech companies: employees with varying levels of technical expertise, the lack cohesive teamwork, poor communication between teams, and critical knowledge being concentrated in a single individual, which creates knowledge gaps and long-term challenges.
@@ -102,33 +101,34 @@
     </div>
   </section>
 
-  <section class="section px-0 pb-5">
+  <section class="section px-0">
     <img
       class="image is-fullwidth is-border-soft"
-      src="media/projects/jumble-2.jpeg"
+      src="media/projects/weather-1.jpeg"
     >
   </section>
 
-  <section class="section px-0 pt-0">
+  <section class="section px-0">
     <div class="columns">
-      <div class="column">
-        <img
-          class="image is-1by1 is-fullwidth is-border-soft"
-          src="media/projects/jumble-4.jpeg"
-        >
-      </div>
-      <div class="column">
-        <img
-          class="image is-1by1 is-fullwidth is-border-soft"
-          src="media/projects/jumble-3.jpeg"
-        >
+      <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">The Explorer</span></div>
+      <div class="column has-text-black">
+        <p>
+          We wanted to address several common issues faced by tech companies: employees with varying levels of technical expertise, the lack cohesive teamwork, poor communication between teams, and critical knowledge being concentrated in a single individual, which creates knowledge gaps and long-term challenges.
+        </p>
       </div>
     </div>
   </section>
 
   <section class="section px-0">
+    <img
+      class="image is-fullwidth is-border-soft"
+      src="media/projects/weather-2.jpeg"
+    >
+  </section>
+
+  <section class="section px-0">
     <div class="columns">
-      <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">The goal</span></div>
+      <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">The Conceptual</span></div>
       <div class="column has-text-black">
         <p>
           The vision was to create a community to engage with other developers and solve problems better, and to find each other not because of geographical proximity but because they are the right people in the right place. Jumble lets you host sessions to collaborate live with other developers in a project you have, and participate in sessions hosted by other developers to collaborate and contribute.
@@ -140,32 +140,8 @@
   <section class="section px-0 pb-5">
     <img
       class="image is-fullwidth is-border-soft"
-      src="media/projects/jumble-5.jpeg"
+      src="media/projects/weather-3.jpeg"
     >
-  </section>
-
-  <section class="section px-0 pb-5">
-    <img
-      class="image is-fullwidth is-border-soft"
-      src="media/projects/jumble-6.jpeg"
-    >
-  </section>
-
-  <section class="section px-0 pt-0">
-    <div class="columns">
-      <div class="column">
-        <img
-          class="image is-1by1 is-fullwidth is-border-soft"
-          src="media/projects/jumble-7.jpeg"
-        >
-      </div>
-      <div class="column">
-        <img
-          class="image is-1by1 is-fullwidth is-border-soft"
-          src="media/projects/jumble-8.jpeg"
-        >
-      </div>
-    </div>
   </section>
 
   <hr class="divider">
