--- a/project_book-a-flight.html
+++ b/project_book-a-flight.html
@@ -111,11 +111,28 @@
     </div>
   </section>
 
-  <section class="section px-0">
+  <section class="section px-0 pb-5">
     <img
       class="image is-fullwidth is-border-soft"
-      src="media/projects/weather-1.jpeg"
+      src="media/projects/flight-3.jpeg"
     >
+  </section>
+
+  <section class="section px-0 pt-0">
+    <div class="columns">
+      <div class="column">
+        <img
+          class="image is-1by1 is-fullwidth is-border-soft"
+          src="media/projects/flight-4.jpeg"
+        >
+      </div>
+      <div class="column">
+        <img
+          class="image is-1by1 is-fullwidth is-border-soft"
+          src="media/projects/flight-5.jpeg"
+        >
+      </div>
+    </div>
   </section>
 
   <section class="section px-0">
@@ -132,25 +149,7 @@
   <section class="section px-0">
     <img
       class="image is-fullwidth is-border-soft"
-      src="media/projects/weather-2.jpeg"
-    >
-  </section>
-
-  <section class="section px-0">
-    <div class="columns">
-      <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">The Conceptual</span></div>
-      <div class="column has-text-black">
-        <p>
-          The vision was to create a community to engage with other developers and solve problems better, and to find each other not because of geographical proximity but because they are the right people in the right place. Jumble lets you host sessions to collaborate live with other developers in a project you have, and participate in sessions hosted by other developers to collaborate and contribute.
-        </p>
-      </div>
-    </div>
-  </section>
-
-  <section class="section px-0 pb-5">
-    <img
-      class="image is-fullwidth is-border-soft"
-      src="media/projects/weather-3.jpeg"
+      src="media/projects/flight-6.jpeg"
     >
   </section>
 
