--- a/project_weather.html
+++ b/project_weather.html
@@ -70,10 +70,9 @@
       <div class="column is-two-fifths"><span class="is-size-3 has-text-weight-semibold has-text-black">My Weather</span></div>
       <div class="column">
         <div class="tags mt-5">
-          <span class="tag is-review-tag is-rounded">EXPLORATION</span>
-          <span class="tag is-review-tag is-rounded">PRODUCT DESIGN</span>
-          <span class="tag is-review-tag is-rounded">UX/UI</span>
-          <span class="tag is-review-tag is-rounded">BRANDING</span>
+          <span class="tag is-category-tag is-rounded">EXPLORATION</span>
+          <span class="tag is-category-tag is-rounded">PRODUCT DESIGN</span>
+          <span class="tag is-category-tag is-rounded">UX/UI</span>
         </div>
         <p class="is-size-5 has-text-black">
           Jumble let you host online pair programming sessions to collaborate live with other developers. This project was part of an acceleration programme by EOI Foundation. My role on this project included conceptualization, market analysis, interviews, prototyping, UX and UI design, and front-end development of the landing page and app components.
