--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
       <div class="column">
         <p class="is-size-5-mobile is-size-4-tablet is-size-3-widescreen has-text-black">
           For the last ten years I've been helping companies translate their needs, vision, and values clearly into
-          solutions in
-          the physical and digital world. My background is in design, branding, UI/UX, and product design.
+          solutions in the physical and digital world. My background is in Design with a strong focus on Product & Service Design and User Experience.
         </p>
       </div>
     </div>
@@ -109,6 +108,26 @@
             <figure class="image is-square">
               <img
                 class="is-border-hard"
+                src="media/huuva-cover.jpg"
+                alt="Placeholder image"
+              />
+            </figure>
+          </div>
+          <div class="card-content px-0">
+            <p class="title is-5 has-text-weight-semibold mb-4 has-text-black">Huuva</p>
+            <div class="content is-body-text has-text-black">
+              <p>Enhancing the back of the house of multiple high volume restaurant kitchen.</p>
+              <a class="button is-small is-light" href="project_huuva.html">Read more</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="cell">
+        <div class="card is-shadowless">
+          <div class="card-image">
+            <figure class="image is-square">
+              <img
+                class="is-border-hard"
                 src="media/jumble-cover.jpeg"
                 alt="Placeholder image"
               />
@@ -130,26 +149,6 @@
             <figure class="image is-square">
               <img
                 class="is-border-hard"
-                src="media/huuva-cover.jpg"
-                alt="Placeholder image"
-              />
-            </figure>
-          </div>
-          <div class="card-content px-0">
-            <p class="title is-5 has-text-weight-semibold mb-4 has-text-black">Huuva</p>
-            <div class="content is-body-text has-text-black">
-              <p>Enhancing the back of the house of multiple high volume restaurant kitchen.</p>
-              <p><a href="#">Read more</a></p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="cell">
-        <div class="card is-shadowless">
-          <div class="card-image">
-            <figure class="image is-square">
-              <img
-                class="is-border-hard"
                 src="media/weather-cover.jpg"
                 alt="Placeholder image"
               />
@@ -158,7 +157,7 @@
           <div class="card-content px-0">
             <p class="title is-5 has-text-weight-semibold mb-4 has-text-black">My Weather</p>
             <div class="content is-body-text has-text-black">
-              <p>Exploring different UX scenarios for a weather app.</p>
+              <p>Exploring different UX scenarios for a weather app using an open API.</p>
               <a class="button is-small is-light" href="project_weather.html">Read more</a>
             </div>
           </div>
@@ -219,7 +218,7 @@
             <p class="title is-5 has-text-weight-semibold mb-4 has-text-black">Elina Lahdetie</p>
             <div class="content is-body-text has-text-black">
               <p>A no-code site update of one of the most demanded aesthetic clinics in Helsinki.</p>
-              <p><a href="#">Read more</a></p>
+              <a class="button is-small is-light" href="project_lahdetie.html">Read more</a>
             </div>
           </div>
         </div>
@@ -239,7 +238,7 @@
             <p class="title is-5 has-text-weight-semibold mb-4 has-text-black">B-MURALS</p>
             <div class="content is-body-text has-text-black">
               <p>An Urban Art Museum and store, with a community driven and educational approach, built with no-code tools.</p>
-              <p><a href="#">Read more</a></p>
+              <a class="button is-small is-light" href="project_bmurals.html">Read more</a>
             </div>
           </div>
         </div>
@@ -259,7 +258,7 @@
             <p class="title is-5 has-text-weight-semibold mb-4 has-text-black">Seda de Cactus</p>
             <div class="content is-body-text has-text-black">
               <p>A no-code online boutique focused on fashion and home décor, inspired in Morocco.</p>
-              <p><a href="#">Read more</a></p>
+              <a class="button is-small is-light" href="project_sedadecactus.html">Read more</a>
             </div>
           </div>
         </div>
