--- a/project_book-a-flight.html
+++ b/project_book-a-flight.html
@@ -70,13 +70,13 @@
       <div class="column is-two-fifths"><span class="is-size-3 has-text-weight-semibold has-text-black">Book-A-Flight</span></div>
       <div class="column">
         <div class="tags mt-5">
-          <span class="tag is-review-tag is-rounded">EXPLORATION</span>
-          <span class="tag is-review-tag is-rounded">PRODUCT DESIGN</span>
-          <span class="tag is-review-tag is-rounded">UX/UI</span>
-          <span class="tag is-review-tag is-rounded">BRANDING</span>
+          <span class="tag is-category-tag is-rounded">EXPLORATION</span>
+          <span class="tag is-category-tag is-rounded">PRODUCT DESIGN</span>
+          <span class="tag is-category-tag is-rounded">UX/UI</span>
+          <span class="tag is-category-tag is-rounded">BRANDING</span>
         </div>
         <p class="is-size-5 has-text-black">
-          Jumble let you host online pair programming sessions to collaborate live with other developers. This project was part of an acceleration programme by EOI Foundation. My role on this project included conceptualization, market analysis, interviews, prototyping, UX and UI design, and front-end development of the landing page and app components.
+          For this project, I had a maximum of 3 hours to improve the clarity and usability of a flight picker. My goal was to create a cleaner interface by focusing on clear trip type selection, simplified date options, a transparent itinerary, and an easy-to-navigate visual hierarchy.
         </p>
 
       </div>
@@ -102,13 +102,24 @@
 
   <section class="section px-0">
     <div class="columns">
-      <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">The Aesthetic</span></div>
+      <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">A quick process</span></div>
       <div class="column has-text-black">
+        <p class="pb-5">
+          I spent the first hour exploring different apps and websites to understand what they did right and wrong. I quickly noticed significant differences between "Airline booking" and "Multi-Airline booking" sites. The latter are more complex due to the need to juggle connections, multiple airlines, fluctuating prices, and luggage options… A common issue I found was that many sites would leave me at a dead-end if no flights matched my selected date and location, without offering alternatives or different options, which was frustrating and unhelpful.
+        </p>
         <p>
-          We wanted to address several common issues faced by tech companies: employees with varying levels of technical expertise, the lack cohesive teamwork, poor communication between teams, and critical knowledge being concentrated in a single individual, which creates knowledge gaps and long-term challenges.
+          After this, I jumped into prototyping to better understand the information hierarchies and the specific details that needed to be displayed. This step was crucial for organizing the content effectively and ensuring that I would meet my initial goals.
         </p>
       </div>
     </div>
+  </section>
+
+  <section class="section px-0 pb-5">
+    <img
+      class="image is-fullwidth is-border-soft"
+      style="border:solid 1px rgb(224, 224, 224);"
+      src="media/projects/flight-6.jpg"
+    >
   </section>
 
   <section class="section px-0 pb-5">
@@ -137,10 +148,10 @@
 
   <section class="section px-0">
     <div class="columns">
-      <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">The Explorer</span></div>
+      <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">Browsing devices</span></div>
       <div class="column has-text-black">
         <p>
-          We wanted to address several common issues faced by tech companies: employees with varying levels of technical expertise, the lack cohesive teamwork, poor communication between teams, and critical knowledge being concentrated in a single individual, which creates knowledge gaps and long-term challenges.
+          There is also a significant difference between desktop and mobile views. In many cases, phone apps clutter the screen with large elements and boxes that are meant to be helpful but end up creating a hard-to-follow interface with little breathing room. This makes the user experience unpleasant. That's why I chose to make the interface as clear and clean as possible.
         </p>
       </div>
     </div>
