--- a/project_delicious.html
+++ b/project_delicious.html
@@ -76,39 +76,28 @@
           <span class="tag is-category-tag is-rounded">BRANDING</span>
         </div>
         <p class="is-size-5 has-text-black">
-          Jumble let you host online pair programming sessions to collaborate live with other developers. This project was part of an acceleration programme by EOI Foundation. My role on this project included conceptualization, market analysis, interviews, prototyping, UX and UI design, and front-end development of the landing page and app components.
+          I was approached to create a prototype for a food takeaway app, where customers could easily browse menus and dishes while maintaining the entire UI on brand. For this project, I aimed to explore ways to offer a more personalized experience tailored to the user's food preferences.
         </p>
 
       </div>
     </div>
   </section>
 
-  <section class="section px-0">
+  <section class="section px-0 pb-0">
     <img
       class="image is-fullwidth is-border-soft"
       src="media/projects/delicious-1.jpeg"
     >
   </section>
 
-  <section class="section px-0">
-    <div class="columns">
-      <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">The gap</span></div>
-      <div class="column has-text-black">
-        <p>
-          We wanted to address several common issues faced by tech companies: employees with varying levels of technical expertise, the lack cohesive teamwork, poor communication between teams, and critical knowledge being concentrated in a single individual, which creates knowledge gaps and long-term challenges.
-        </p>
-      </div>
-    </div>
-  </section>
-
-  <section class="section px-0 pb-5">
+  <section class="section px-0 py-5">
     <img
       class="image is-fullwidth is-border-soft"
       src="media/projects/delicious-2.jpeg"
     >
   </section>
 
-  <section class="section px-0 pt-0">
+  <section class="section px-0 py-0">
     <div class="columns">
       <div class="column">
         <img
@@ -125,18 +114,7 @@
     </div>
   </section>
 
-  <section class="section px-0">
-    <div class="columns">
-      <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">The goal</span></div>
-      <div class="column has-text-black">
-        <p>
-          The vision was to create a community to engage with other developers and solve problems better, and to find each other not because of geographical proximity but because they are the right people in the right place. Jumble lets you host sessions to collaborate live with other developers in a project you have, and participate in sessions hosted by other developers to collaborate and contribute.
-        </p>
-      </div>
-    </div>
-  </section>
-
-  <section class="section px-0">
+  <section class="section px-0 pt-5">
     <img
       class="image is-fullwidth is-border-soft"
       src="media/projects/delicious-5.jpeg"
