--- a/project_jumble.html
+++ b/project_jumble.html
@@ -96,7 +96,7 @@
       <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">The gap</span></div>
       <div class="column has-text-black">
         <p>
-          We wanted to address several common issues faced by tech companies: employees with varying levels of technical expertise, the lack cohesive teamwork, poor communication between teams, and critical knowledge being concentrated in a single individual, which creates knowledge gaps and long-term challenges.
+          We wanted to address common issues faced by tech companies: employees with varying levels of technical expertise, the lack cohesive teamwork, poor communication between teams, and critical knowledge being concentrated in a single individual, which creates knowledge gaps and long-term challenges.
         </p>
       </div>
     </div>
@@ -137,11 +137,22 @@
     </div>
   </section>
 
-  <section class="section px-0 pb-5">
+  <section class="section px-0">
     <img
       class="image is-fullwidth is-border-soft"
       src="media/projects/jumble-5.jpeg"
     >
+  </section>
+
+  <section class="section px-0">
+    <div class="columns">
+      <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">A 4 month process</span></div>
+      <div class="column has-text-black">
+        <p>
+          During this period, we worked hard to transform a basic idea into a fully functional MVP that we're proud of. We developed detailed business plans and had in-depth conversations with potential customers. We were flexible enough to pivot when necessary, trying out different approaches to tackle the problem. This whole accelerator process wasn't just about creating a product; it was about refining our skills and learning from every step.
+        </p>
+      </div>
+    </div>
   </section>
 
   <section class="section px-0 pb-5">
