--- a/project_weather.html
+++ b/project_weather.html
@@ -75,7 +75,7 @@
           <span class="tag is-category-tag is-rounded">UX/UI</span>
         </div>
         <p class="is-size-5 has-text-black">
-          Jumble let you host online pair programming sessions to collaborate live with other developers. This project was part of an acceleration programme by EOI Foundation. My role on this project included conceptualization, market analysis, interviews, prototyping, UX and UI design, and front-end development of the landing page and app components.
+          For this project, I wanted to dive into different user experience scenarios for a fictional weather app using an open API for real-time weather data. My goal was to create personalized experiences for different users, making the most out of the data available. By playing around with various design approaches and ways of presenting the data, I aimed to find the right mix of functionality, aesthetics, and user-friendliness.
         </p>
 
       </div>
@@ -94,7 +94,7 @@
       <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">The Aesthetic</span></div>
       <div class="column has-text-black">
         <p>
-          We wanted to address several common issues faced by tech companies: employees with varying levels of technical expertise, the lack cohesive teamwork, poor communication between teams, and critical knowledge being concentrated in a single individual, which creates knowledge gaps and long-term challenges.
+          For this first version, I envisioned a beauty brand aiming to go the extra mile in engaging with their customers. It's designed for younger people who care about their skin and regularly use lotions and skincare products. Instead of just displaying numbers, the idea was to provide relevant guidance based on key weather conditions that can affect the skin.
         </p>
       </div>
     </div>
@@ -112,7 +112,7 @@
       <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">The Explorer</span></div>
       <div class="column has-text-black">
         <p>
-          We wanted to address several common issues faced by tech companies: employees with varying levels of technical expertise, the lack cohesive teamwork, poor communication between teams, and critical knowledge being concentrated in a single individual, which creates knowledge gaps and long-term challenges.
+          The goal in this scenario was to see how much data could be provided to users while still keeping an user friendly interface. The app aims to give users actionable weather data for them to make informed decisions about their daily activities or long-term plans.
         </p>
       </div>
     </div>
@@ -130,7 +130,7 @@
       <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">The Conceptual</span></div>
       <div class="column has-text-black">
         <p>
-          The vision was to create a community to engage with other developers and solve problems better, and to find each other not because of geographical proximity but because they are the right people in the right place. Jumble lets you host sessions to collaborate live with other developers in a project you have, and participate in sessions hosted by other developers to collaborate and contribute.
+          In this approach, I aimed to create something more artistic and less functional. I pictured a video wall projection for an exhibition, where the data would change over time, offering a unique experience depending on the day; being playful with the color scales to create different atmospheres. 
         </p>
       </div>
     </div>
