--- a/project_x343cEuV.html
+++ b/project_x343cEuV.html
@@ -70,28 +70,47 @@
       <div class="column is-two-fifths"><span class="is-size-3 has-text-weight-semibold has-text-black">Huuva</span></div>
       <div class="column">
         <div class="tags mt-5">
-          <span class="tag is-category-tag is-rounded">MVP</span>
           <span class="tag is-category-tag is-rounded">PRODUCT DESIGN</span>
           <span class="tag is-category-tag is-rounded">SERVICE DESIGN</span>
+          <span class="tag is-category-tag is-rounded">WORKSHOPS</span>
           <span class="tag is-category-tag is-rounded">UX/UI</span>
           <span class="tag is-category-tag is-rounded">BRANDING</span>
         </div>
-        <p class="is-size-5 has-text-black">
-          Jumble let you host online pair programming sessions to collaborate live with other developers. This project was part of an acceleration programme by EOI Foundation. My role on this project included conceptualization, market analysis, interviews, prototyping, UX and UI design, and front-end development of the landing page and app components.
+        <p class="is-size-5 has-text-black pb-5">
+          As a Product Designer, I worked closely with the software team to improve many of the different user experiences within Huuva's apps as well as working on site to streamline kitchen workflows and procedures. 
         </p>
-
+        <p class="is-size-6 has-text-black pb-5">
+          My goal was to make the high-intensity job of our chefs easier, faster, and more enjoyable. Meanwhile helping managers with the tools needed to create, update and modify menus, visualize relevant data from different kitchens and keep track of daily activities in the different locations.
+        </p>
+        <p class="is-size-6 has-text-black pb-5">
+          Holistically, my role required aligning different teams working on common projects. I gathered insights, defined required needs, fostered open discussions and facilitated workshops and working sessions. Additionally, I designed high-fidelity prototypes to visualize workflows and interactions of features, which helped in user testing and validation. 
+        </p>
+        <p class="is-size-6 has-text-black">
+          During my time at the company, I: led product discovery processes, owned the UX and UI of the product, created prototypes for validation and testing, helped teams to align internally, maintained the website (Webflow), started a newsletter and increased from 30 subs to 1.5k (Mailchimp), implemented a live chat to troubleshoot live purchases (Zendesk), helped define the strategy of the digital brand, led photoshoot and videoshoot sessions of new brands and introduced a content creation tool and manager for social media (Canva).
+         </p>
       </div>
     </div>
   </section>
 
-  <section class="section px-0 pb-0">
+  <section class="section px-0">
     <img
       class="image is-fullwidth is-border-soft"
       src="media/projects/X9Z4-7A1B.jpeg"
     >
   </section>
 
-  <section class="section px-0 pt-5">
+  <section class="section px-0">
+    <div class="columns">
+      <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">The queue</span></div>
+      <div class="column has-text-black">
+        <p>
+          Traditional kitchens still have very traditional ways of going by their days, using pen and paper, communicating in person, or having specific roles for specific tasks. At company Huuva, the runners are Wolt, Foodora, and Uber Eats. there are no waiters, the customer order on the spot what they crave the most. Also, there is no paper for receiving the orders, each cooking station has its own tablet where the orders are accepted, displayed and moved across the different statuses until they are finally "ready for pickup".
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section class="section px-0">
     <img
       class="image is-fullwidth is-border-soft"
       src="media/projects/Y8X3-6B2C.jpeg"
@@ -100,16 +119,16 @@
 
   <section class="section px-0">
     <div class="columns">
-      <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">The gap</span></div>
+      <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">Handling incoming orders</span></div>
       <div class="column has-text-black">
         <p>
-          We wanted to address several common issues faced by tech companies: employees with varying levels of technical expertise, the lack cohesive teamwork, poor communication between teams, and critical knowledge being concentrated in a single individual, which creates knowledge gaps and long-term challenges.
+          Our focus on increasing order acceptance highlighted the critical role of clear visibility and informed decision-making in optimizing kitchen performance. We significantly improved order acceptance rates by implementing a solution that provided clarity on accepted orders, grouped similar items, and aligned with existing cooking windows. However, this journey also underscored the interconnection of various kitchen operations and the importance of ingredient management, campaign planning, and waste reduction strategies in sustaining these improvements.
         </p>
       </div>
     </div>
   </section>
 
-  <section class="section px-0 pb-5">
+  <section class="section px-0">
     <img
       class="image is-fullwidth is-border-soft"
       src="media/projects/Z7Y2-5C3D.jpeg"
@@ -118,16 +137,19 @@
 
   <section class="section px-0">
     <div class="columns">
-      <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">The goal</span></div>
+      <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">Waste management</span></div>
       <div class="column has-text-black">
+        <p class="pb-5">
+          Ingredient waste is a crucial metric for any restaurant. Traditional restaurants have an easier time managing this since their menus don't change often, making inventory and waste management simpler. At Huuva, each kitchen handles between 5 to 7 brands, making ingredient management essential for maintaining healthy unit economics. To address this, we implemented a digital version of waste tracking for the kitchens. Previously, this process was done manually at each location, making it difficult for managers to keep track.
+        </p>
         <p>
-          The vision was to create a community to engage with other developers and solve problems better, and to find each other not because of geographical proximity but because they are the right people in the right place. Jumble lets you host sessions to collaborate live with other developers in a project you have, and participate in sessions hosted by other developers to collaborate and contribute.
+          We found that although the crews were following the process, it had flaws. In the first week of implementing the digital system, the entire crew was happy to fill out waste reports in seconds. Managers could also easily assess kitchen performance on a daily and weekly basis by checking their dashboards, tackling potential wastage and comparing it to actual stock levels. This provided a clearer view of kitchen performance and spending.
         </p>
       </div>
     </div>
   </section>
 
-  <section class="section px-0 pb-5">
+  <section class="section px-0">
     <img
       class="image is-fullwidth is-border-soft"
       src="media/projects/W6V1-4D4E.jpeg"
@@ -136,10 +158,22 @@
 
   <section class="section px-0">
     <div class="columns">
-      <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">The goal</span></div>
-      <div class="column has-text-black">
+      <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">Kitchen dashboard</span></div>
+      <div class="column has-text-black content">
         <p>
-          The vision was to create a community to engage with other developers and solve problems better, and to find each other not because of geographical proximity but because they are the right people in the right place. Jumble lets you host sessions to collaborate live with other developers in a project you have, and participate in sessions hosted by other developers to collaborate and contribute.
+          One of our goals was to make the kitchen as "paperless" as possible by automating tasks and eliminating cumbersome processes that could easily be performed digitally. Our kitchen dashboard allows staff to:
+        </p>
+        <ul>
+            <li>Check daily, weekly, and monthly sales, sortable by brand.</li>
+            <li>Check theoretical usage of ingredients and mise en place in grams, kilos, or liters.</li>
+            <li>Monitor current and upcoming selling campaigns.</li>
+            <li>Get an overview of key performance indicators (KPIs).</li>
+            <li>Enable or disable dishes and extras from the live menus.</li>
+            <li>Open or close a kitchen across different service providers.</li>
+            <li>Report waste ingredients or newly cooked mise en place.</li>
+            <li>Troubleshoot the app, including network status and printers.</li>
+        </ul>
+        <p>This digital approach significantly streamlined kitchen operations, making them more efficient.</p> 
         </p>
       </div>
     </div>
@@ -152,7 +186,7 @@
     >
   </section>
 
-  <section class="section px-0 pb-5">
+  <section class="section px-0 pt-0">
     <img
       class="image is-fullwidth is-border-soft"
       src="media/projects/T3S7-1G7H.jpeg"
@@ -161,11 +195,14 @@
 
   <section class="section px-0">
     <div class="columns">
-      <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">The goal</span></div>
+      <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">Campaigns dashboard</span></div>
       <div class="column has-text-black">
         <p>
-          The vision was to create a community to engage with other developers and solve problems better, and to find each other not because of geographical proximity but because they are the right people in the right place. Jumble lets you host sessions to collaborate live with other developers in a project you have, and participate in sessions hosted by other developers to collaborate and contribute.
+          The communication between HQ and kitchens was crucial when performing campaigns. These weekly events would often increase stock demands and require careful ingredient and mise en place planning to fulfill all the orders. To address this, we implemented a tool where the marketing team could input campaign specifications, and kitchen managers could check, verify, and prepare.
         </p>
+        <p class="pt-5">
+          Our journey into improving operations revealed the intricate balance of a healthy kitchen. Through kitchen shift experiences, interviews and testing, we gained important insights into the diverse needs and challenges that kitchens face.       
+         </p>
       </div>
     </div>
   </section>
